--- a/onebite-cinema-app/src/app/movie/[id]/page.module.css
+++ b/onebite-cinema-app/src/app/movie/[id]/page.module.css
@@ -8,13 +8,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 20px;
   padding: 20px;
 
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 
-  box-shadow: 5px 5px 15px;
+  box-shadow: 5px 5px 15px rgb(229, 9, 20, 0.7);
   border-radius: 5px;
 
   position: relative;
@@ -41,14 +42,15 @@
 }
 
 .title {
-  font-size: large;
+  font-size: 30px;
   font-weight: bold;
 }
 
 .subtitle {
-  font-weight: 600;
+  font-size: 25px;
+  font-weight: bold;
 }
 
 .description {
-  line-height: 1.3;
+  line-height: 1.5;
 }
